--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. Stanisław Biber</title>
+  <title>Dr Stanisław Biber</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
   <h1>Dr Stanisław W. Biber</h1>
 
   <p>
-    Dr. Stanisław W. Biber is a Research Fellow at the University of Surrey, specializing in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
+    Dr Stanisław W. Biber is a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
     His expertise lies in applied mathematics, with a focus on dynamical systems, nonsmooth mechanics, and numerical methods.
   </p>
 
@@ -51,8 +51,8 @@
     <h2>Links</h2>
     <ul>
       <li><a href="https://www.surrey.ac.uk/people/stanislaw-waldemar-biber" target="_blank">University Profile</a></li>
+      <li><a href="https://scholar.google.co.uk/citations?user=5iS0dKQAAAAJ" target="blank">Google Scholar Profile</a></li>
       <li><a href="https://www.linkedin.com/in/stanislaw-biber" target="_blank">LinkedIn</a></li>
-      <li><a href="mailto:s.biber@surrey.ac.uk">Email</a></li>
       <!-- Add a link to your CV if hosted online -->
     </ul>
   </div>
