--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dr Stanisław Biber</title>
   <style>
     body {
-    font-family: Arial, sans-serif;
+    font-family: 'Rubik', sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 2rem;
@@ -17,6 +17,11 @@
 
   h1, h2 {
     color: #00ccff;
+    font-family: 'Candara', sans-serif;
+  }
+  h3 {
+    color: #ff4d4d;
+    font-family: 'Candara', sans-serif;
   }
 
   a {
@@ -46,14 +51,16 @@
 </head>
 <body>
   <nav>
-      <a href="#bio">About me</a> |
-      <a href="#publications">Publications</a> |
-      <a href="#links">Links & contact information</a>
-    </nav>
-  <h1 id="bio">Dr Stanisław W. Biber</h1>
+  <a href="index.html">Home</a> |
+  <a href="publications.html">Publications</a> |
+  <a href="contact.html">Contact</a>
+</nav>
 
+  <h1 style="text-align: center;">Dr Stanisław W. Biber</h1>
+  <h3 style="text-align: center;">Research Fellow in Mathematical Modelling of Neurological Condition and Optimisation of Deep Brain stimulation</h3>
+  <h3 style="text-align: center;">School of Mathematics and Physics, University of Surrey</h3>
   <p>
-    Dr Stanisław W. Biber is a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
+    I am an applied mathematicia a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
     His expertise lies in applied mathematics, with a focus on dynamical systems, nonsmooth mechanics, and numerical methods.
   </p>
 
@@ -65,18 +72,6 @@
     Dr. Biber has contributed to diverse projects, including the development of particle algorithms for animal tracking in conservation efforts and studies on chaotic dynamics in celestial mechanics. He is also recognized as a Fellow of the Higher Education Academy, reflecting his commitment to teaching excellence.
   </p>
 
-  <div class="links">
-
-  <h2 id="publications">Publications</h2>
   
-  <h2 id="links">Links</h2>
-    <ul>
-      <li><a href="https://www.surrey.ac.uk/people/stanislaw-waldemar-biber" target="_blank">University Profile</a></li>
-      <li><a href="https://scholar.google.co.uk/citations?user=5iS0dKQAAAAJ" target="blank">Google Scholar Profile</a></li>
-      <li><a href="https://www.linkedin.com/in/stanislaw-biber" target="_blank">LinkedIn</a></li>
-      <!-- Add a link to your CV if hosted online -->
-    </ul>
-  </div>
-
 </body>
 </html>
