--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h3 style="text-align: center;">Research Fellow in Mathematical Modelling of Neurological Condition and Optimisation of Deep Brain stimulation</h3>
   <h3 style="text-align: center;">School of Mathematics and Physics, University of Surrey</h3>
   <p>
-    I am an applied mathematicia a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
+    I am an applied mathematician a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
     His expertise lies in applied mathematics, with a focus on dynamical systems, nonsmooth mechanics, and numerical methods.
   </p>
 
