--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,21 @@
   	</ul>
 
 
-  <h2>Talks</h2>
+  <h2>Talks & Presentations</h2>
+  <ul>
+    <li> British Mathematical Colloquium – British Applied Mathematics Colloquium. Poster presentation: <i>Curious dynamics of a Golf Ball Bounce</i>, April 2021.</li>
+    <li> SIAM Applications of Dynamical Systems (DS21). Minisymposium: <i>The Dynamics of Golf Ball Bounce</i>. Coauthors: Champneys, A. R., Szalai, R., May 2021.</li>
+    <li>Dynamics Days Europe 2021. Contributed talk: <i>Curious Dynamics of a Golf Ball Bounce</i>, August 2021.</li>
+    <li> Dynamical Systems – Theory and Applications. Contributed Talk: <i>The Dynamics of Golf Ball Bounce</i>, December 2021.</li>
+    <li> British Applied Mathematics Colloquium, Loughborough. Contributed talk: <i>Curious dynamics of a golf ball bounce</i>. Coauthors: Champneys, A. R., Szalai, R., April 2022.</li>
+    <li> British Applied Mathematics Colloquium, Bristol. Contributed talk: <i>Effects of friction and tangential compliance in golf ball bounce</i>. Coauthors: Champneys, A. R., Szalai, R., April 2023.</li>
+    <li> SIAM Applications of Dynamical Systems (DS23), Portland, OR, USA. Minisymposium talk: <i>Analysis of Point-Contact Models of the Bounce of a Golf Ball Against a Compliant Frictional Surface</i>, May 2023.</li>
+    <li> British Applied Mathematics Colloquium, Newcastle. Contributed talk: <i>Bounce of a rubber ball and other impact phenomena</i>. Coauthors: Champneys, A. R., Várkonyi, P., Hunt H., April 2024.</li>
+    <li> UK DRI Connectome. Poster presentation: <i>Deep brain stimulation in Parkinson's Disease: Insights from mathematical understanding of entrainment</i>. Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Skeldon, A. C., Denison, T., December 2024.</li> 
+    <li> University of Bristol Engineering Mathematics Research Group Away Day, Bristol. Invited talk: <i>Deep brain stimulation in Parkinson’s Disease. Insights from mathematical understanding of entrainment</i>. Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., March 2025.</li>
+    <li> SIAM Applications of Dynamical Systems (DS25), Denver, CO, USA. Minisymposium: <i>Mathematics of Brain Function and Disease</i>, talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., May 2025.</li>
+    <li> British Applied Mathematics Colloquium, Exeter. Minisymposium talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., June 2025.</li>
+  </ul>
 
   <h2>Popular science articles</h2>
     <ul>
