--- a/index.html
+++ b/index.html
@@ -56,12 +56,18 @@
   <a href="contact.html">Contact</a>
 </nav>
 
+   <!-- <img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;"  /> -->
+
+  <div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
+    <img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
+  </div>
+  
+
   <h1 style="text-align: center;">Dr Stanisław W. Biber</h1>
   <h3 style="text-align: center;">Research Fellow in Mathematical Modelling of Neurological Condition and Optimisation of Deep Brain stimulation</h3>
   <h3 style="text-align: center;">School of Mathematics and Physics, University of Surrey</h3>
   <p>
-    I am an applied mathematician a Research Fellow at the University of Surrey, specialising in the mathematical modelling of neurological conditions and the optimization of deep brain stimulation.
-    His expertise lies in applied mathematics, with a focus on dynamical systems, nonsmooth mechanics, and numerical methods.
+    I am an applied mathematician, currently working as a Research Fellow at the University of Surrey. I specialise in widely-understood mathematical modelling, in particular using  
   </p>
 
   <p>
@@ -72,6 +78,30 @@
     Dr. Biber has contributed to diverse projects, including the development of particle algorithms for animal tracking in conservation efforts and studies on chaotic dynamics in celestial mechanics. He is also recognized as a Fellow of the Higher Education Academy, reflecting his commitment to teaching excellence.
   </p>
 
-  
+  <h2>Honorary appointments</h2>
+  <b>University of Bristol</b> <a href="https://www.bristol.ac.uk/people/person/Stanislaw-Biber-026ee081-1fc8-42ac-aa31-2fd200e64647/">Honorary teaching Associate</a>
+
+
+  <h2>Previous academic appointments</h2>
+  <ul>
+    <li> <b>University of Bristol</b> <span>&#8211;</span> School of Engineering Mathematics and Technology.
+      <br> Teaching Associate, 2021-2024.</li>
+    <li> <b>University of Bristol</b> <span>&#8211;</span> School of Engineering Mathematics and Technology.
+      <br> Research Fellow, 2022-2023.</li>
+  </ul>
+
+
+  <h2>Education</h2>
+  <ul>
+    <li> <b>University of Bristol</b> <span>&#8211;</span> Doctor of Philosophy (PhD) in Engineering Mathematics, 2023 
+      <br>Thesis title: Investigation into the golf ball and turf interaction. A study on friction and impact problems.
+      <br> Project supervisors: <a href="https://www.bristol.ac.uk/people/person/Alan-Champneys-f32873f8-bbfb-4aa8-8fa9-6a95214b2822/">Prof. Alan R. Champneys</a>, <a href="https://www.bristol.ac.uk/people/person/Robert-Szalai-2fcb25d3-66b7-4d88-87d9-b197c132f516/">Dr Robert Szalai</a>.</li>
+    <li> <b>University of Oxford, St Hilda's College</b> <span>&#8211;</span> Master of Mathematics, 2018.
+  </ul>
+
+  <div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
+    <img src="figures/endofpage_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
+  </div>
+
 </body>
 </html>
