--- a/index.html
+++ b/index.html
@@ -56,27 +56,27 @@
   <a href="contact.html">Contact</a>
 </nav>
 
-   <!-- <img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;"  /> -->
+  <!--<img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;"  /> -->
 
-  <div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
+  <!--<div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
     <img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
-  </div>
-  
+  </div>-->
 
-  <h1 style="text-align: center;">Dr Stanisław W. Biber</h1>
+  <div style="width: 100vw; margin-left">
+    <object type="image/svg+xml" data="figures/landing_fig.svg"width="800px" height="auto"></object>
+  </div>
+ 
+  <h1 style="text-align: center;">Stanisław Biber</h1>
   <h3 style="text-align: center;">Research Fellow in Mathematical Modelling of Neurological Condition and Optimisation of Deep Brain stimulation</h3>
   <h3 style="text-align: center;">School of Mathematics and Physics, University of Surrey</h3>
   <p>
-    I am an applied mathematician, currently working as a Research Fellow at the University of Surrey. I specialise in widely-understood mathematical modelling, in particular using  
+    I am an applied mathematician, currently working as a Research Fellow at the University of Surrey. I specialise in widely-understood mathematical modelling, with experience in modelling impact and friction phenomena, chaotic dynamics,biological processes and neuoranal interactions.
   </p>
 
   <p>
-    He earned his Master of Mathematics degree from the University of Oxford in 2018 and completed his PhD in Engineering Mathematics at the University of Bristol in 2023. His doctoral research, supported by R&A Rules Ltd and the EPSRC, centered on the dynamics of golf ball-turf interactions.
+    I am passionate about bringing a mathematical formulation into interdisciplinary projects. This often allows for additional insights, making predictions or informing experimental data collections. Feel free to reach out if you would like to discuss mathematical modelling projects.
   </p>
 
-  <p>
-    Dr. Biber has contributed to diverse projects, including the development of particle algorithms for animal tracking in conservation efforts and studies on chaotic dynamics in celestial mechanics. He is also recognized as a Fellow of the Higher Education Academy, reflecting his commitment to teaching excellence.
-  </p>
 
   <h2>Honorary appointments</h2>
   <b>University of Bristol</b> <a href="https://www.bristol.ac.uk/people/person/Stanislaw-Biber-026ee081-1fc8-42ac-aa31-2fd200e64647/">Honorary teaching Associate</a>
@@ -99,9 +99,19 @@
     <li> <b>University of Oxford, St Hilda's College</b> <span>&#8211;</span> Master of Mathematics, 2018.
   </ul>
 
+  <h2>Collaborations</h2>
+  <ul>
+    <li> <b>University of Bristol, UK</b>: Prof. Alan Champneys, Dr Ryan Palmer</li>
+    <li> <b>Edinburgh Napier University</b>: Dr Edward Lavender</li>
+    <li> <b> Poznań University of Life Sciences, Poland</b>: Prof. Jarosław Potarzycki, Prof. Katarzyna Przygocka-Cyna
+
+  </ul>
+
+
   <div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
     <img src="figures/endofpage_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
   </div>
+
 
 </body>
 </html>
