--- a/contact.html
+++ b/contact.html
@@ -103,5 +103,9 @@
       <!-- Add a link to your CV if hosted online -->
     </ul>
 
+    <div style="width: 100vw; margin-left">
+    <object type="image/svg+xml" data="figures/endofpage_fig.svg"width="800px" height="auto"></object>
+  </div
+  
 </body>
 </html>
