--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   }
 
   img {
-    max-width: 150px;
+    max-width: 100%;
     border-radius: 8px;
   }
 
@@ -56,14 +56,9 @@
   <a href="contact.html">Contact</a>
 </nav>
 
-  <!--<img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;"  /> -->
-
-  <!--<div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
-    <img src="figures/landing_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
-  </div>-->
 
   <div style="width: 100vw; margin-left">
-    <object type="image/svg+xml" data="figures/landing_fig.svg"width="800px" height="auto"></object>
+    <object type="image/svg+xml" data="figures/landing_fig.svg" width="800px" height="auto"></object>
   </div>
  
   <h1 style="text-align: center;">Stanisław Biber</h1>
@@ -108,8 +103,8 @@
   </ul>
 
 
-  <div style="width: 100vw; margin-left: calc(-50vw + 50%); text-align: center;">
-    <img src="figures/endofpage_fig.svg" alt="Poincare section in a forced system" style="width: 100%; height: auto;" />
+  <div style="width: 100vw; margin-left">
+    <object type="image/svg+xml" data="figures/endofpage_fig.svg"width="800px" height="auto"></object>
   </div>
 
 
