--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </nav>
 
 
-  <div style="width: 100vw; margin-left">
+  <div style="width: 100%; max-width: 100%; overflow-x: hidden;">
     <object type="image/svg+xml" data="figures/landing_fig.svg" width="800px" height="auto"></object>
   </div>
  
