--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
   <h2>Collaborations</h2>
   <ul>
     <li> <b>University of Bristol, UK</b>: Prof. Alan Champneys, Dr Ryan Palmer</li>
-    <li> <b>Edinburgh Napier University</b>: Dr Edward Lavender</li>
+    <li> <b>Edinburgh Napier University</b>: <a href="https://github.com/edwardlavender">Dr Edward Lavender</a></li>
     <li> <b> Poznań University of Life Sciences, Poland</b>: Prof. Jarosław Potarzycki, Prof. Katarzyna Przygocka-Cyna
 
   </ul>
 
 
-  <div style="width: 100vw; margin-left">
+  <div style="width: 100%; max-width: 100%; overflow-x: hidden;">
     <object type="image/svg+xml" data="figures/endofpage_fig.svg"width="800px" height="auto"></object>
   </div>
 
