--- a/publications.html
+++ b/publications.html
@@ -96,9 +96,9 @@
       <li><a href="https://www.siam.org/publications/siam-news/articles/modeling-golf-ball-bounce-experimental-observations-and-mathematical-analysis/" target="blank">Modeling Golf Ball Bounce: Experimental Observations and Mathematical Analysis</a>, SIAM News, January 2025</li>
   </ul>
 
-  <div style="width: 100vw; margin-left">
+  <div style="width: 100%; max-width: 100%; overflow-x: hidden;">
     <object type="image/svg+xml" data="figures/endofpage_fig.svg"width="800px" height="auto"></object>
-  </div
+  </div>
 
 
 </body>
