--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
   <div style="width: 100%; max-width: 100%; overflow-x: hidden;">
-    <object type="image/svg+xml" data="figures/landing_fig.svg" width="800px" height="auto"></object>
+    <object type="image/svg+xml" data="figures/landing_fig2.svg" width="800px" height="auto"></object>
   </div>
  
   <h1 style="text-align: center;">Stanisław Biber</h1>
