--- a/index.html
+++ b/index.html
@@ -64,13 +64,28 @@
   <h1 style="text-align: center;">Stanisław Biber</h1>
   <h3 style="text-align: center;">Research Fellow in Mathematical Modelling of Neurological Condition and Optimisation of Deep Brain stimulation</h3>
   <h3 style="text-align: center;">School of Mathematics and Physics, University of Surrey</h3>
-  <p>
-    I am an applied mathematician, currently working as a Research Fellow at the University of Surrey. I specialise in widely-understood mathematical modelling, with experience in modelling impact and friction phenomena, chaotic dynamics,biological processes and neuoranal interactions.
-  </p>
+  
+  <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 20px; margin: 2em 0;">
+  
+  <!-- Portrait -->
+  <div style="flex: 1; min-width: 200px; text-align: center;">
+    <img src="figures/portrait.png" alt="Stanislaw Biber Portrait" style="max-width: 100%; height: auto; border-radius: 8px;" />
+  </div>
+  
+  <!-- Bio Text -->
+  <div style="flex: 2; min-width: 250px;">
+    <p style="font-size: 1.1em; line-height: 1.6;">
+     I am an applied mathematician, currently working as a Research Fellow at the University of Surrey. I specialise in widely-understood mathematical modelling, with experience in modelling impact and friction phenomena, chaotic dynamics, biological processes and neuoranal interactions.
+    </p>
 
-  <p>
-    I am passionate about bringing a mathematical formulation into interdisciplinary projects. This often allows for additional insights, making predictions or informing experimental data collections. Feel free to reach out if you would like to discuss mathematical modelling projects.
-  </p>
+    <p style="font-size: 1.1em; line-height: 1.6;">
+     I am passionate about bringing a mathematical formulation into interdisciplinary projects. This often allows for additional insights, making predictions or informing experimental data collections. Feel free to reach out if you would like to discuss mathematical modelling projects.
+    </p>
+  </div>
+
+</div>
+
+
 
 
   <h2>Honorary appointments</h2>
