--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,19 @@
   		<li> Kwiecinski, J. A., <b> Biber, S. W.</b>, Van Gorder, R. A. Chaotic Rotations of a Rigid Ellipsoidal Body Exhibiting Spin-Orbit Misalignment in a Periodic Orbit. International Journal of Bifurcation and Chaos 29, 07 (2019). <a href="https://doi.org/10.1142/S0218127419300180">https://doi.org/10.1142/S0218127419300180</a></li>
   	</ul>
 
+  <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin: 2em 0;">
+  
+  <!-- First Image -->
+  <div style="flex: 1; min-width: 250px; text-align: center;">
+    <img src="figures/ball_trace1.png" alt="Supperposition of stills from a high speed recording of a golf ball bounce" style="max-width: 100%; height: auto; border-radius: 8px;" />
+  </div>
+
+  <!-- Second Image -->
+  <div style="flex: 1; min-width: 250px; text-align: center;">
+    <img src="figures/filippov.png" alt="Filippov dynamics in ball bounce" style="max-width: 100%; height: auto; border-radius: 8px;" />
+  </div>
+
+</div>
 
   <h2>Talks & Presentations</h2>
   <ul>
@@ -90,6 +103,8 @@
     <li> SIAM Applications of Dynamical Systems (DS25), Denver, CO, USA. Minisymposium: <i>Mathematics of Brain Function and Disease</i>, talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., May 2025.</li>
     <li> British Applied Mathematics Colloquium, Exeter. Minisymposium talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., June 2025.</li>
   </ul>
+
+  <img src="figures/tongues.png" alt="Arnold tongues in forced neuronal dynamics" style="max-width: 100%; height: auto; border-radius: 8px;" />
 
   <h2>Popular science articles</h2>
     <ul>
