--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <title>Dr Stanisław Biber</title>
   <style>
     body {
-    font-family: Rubik, sans-serif;
+    font-family: 'Curiance', sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 2rem;
