--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dr Stanisław Biber</title>
   <style>
     body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Curiance', sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 2rem;
@@ -112,8 +112,8 @@
   <h2>Collaborations</h2>
   <ul>
     <li> <b>University of Bristol, UK</b>: Prof. Alan Champneys, Dr Ryan Palmer</li>
-    <li> <b>Edinburgh Napier University</b>: <a href="https://github.com/edwardlavender">Dr Edward Lavender</a></li>
-    <li> <b> Poznań University of Life Sciences, Poland</b>: Prof. Jarosław Potarzycki, Prof. Katarzyna Przygocka-Cyna
+    <li> <b>EAWAG</b>: <a href="https://github.com/edwardlavender">Dr Edward Lavender</a></li>
+    <li> <b>Poznań University of Life Sciences, Poland</b>: Prof. Jarosław Potarzycki, Prof. Katarzyna Przygocka-Cyna
 
   </ul>
 
