finally getting nice fonts

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dr Stanisław Biber</title>
   <style>
     body {
-    font-family: 'Curiance', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 2rem;
@@ -26,11 +27,11 @@
 
   h1, h2 {
     color: #00ccff;
-    font-family: 'Candara', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
   h3 {
     color: #ff4d4d;
-    font-family: 'Candara', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
   a {
     color: #66ccff;
