--- a/publications.html
+++ b/publications.html
@@ -3,12 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dr Stanisław Biber</title>
   <style>
     body {
-    font-family: 'Curiance', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     max-width: 800px;
     margin: auto;
     padding: 2rem;
@@ -19,11 +20,11 @@
 
   h1, h2 {
     color: #00ccff;
-    font-family: 'Candara', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
   h3 {
     color: #ff4d4d;
-    font-family: 'Candara', sans-serif;
+    font-family: 'Playfair Display', serif;
   }
 
   a {
@@ -89,19 +90,31 @@
 
   <h2>Talks & Presentations</h2>
   <ul> 
-    <li> British Applied Mathematics Colloquium, Exeter. Minisymposium talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., June 2025.</li>
-    <li> SIAM Applications of Dynamical Systems (DS25), Denver, CO, USA. Minisymposium: <i>Mathematics of Brain Function and Disease</i>, talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., May 2025.</li>
-    <li> University of Bristol Engineering Mathematics Research Group Away Day, Bristol. Invited talk: <i>Deep brain stimulation in Parkinson’s Disease. Insights from mathematical understanding of entrainment</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C., March 2025.</li>
-    <li> UK DRI Connectome. Poster presentation: <i>Deep brain stimulation in Parkinson's Disease: Insights from mathematical understanding of entrainment</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Skeldon, A. C., Denison, T., December 2024.</li> 
-    <li> British Applied Mathematics Colloquium, Newcastle. Contributed talk: <i>Bounce of a rubber ball and other impact phenomena</i>. <br>Coauthors: Champneys, A. R., Várkonyi, P., Hunt H., April 2024.</li>
-    <li> SIAM Applications of Dynamical Systems (DS23), Portland, OR, USA. Minisymposium talk: <i>Analysis of Point-Contact Models of the Bounce of a Golf Ball Against a Compliant Frictional Surface</i>.
-    <br>Coauthors: Champneys, A. R., Szalai, R., May 2023.</li>
-    <li> British Applied Mathematics Colloquium, Bristol. Contributed talk: <i>Effects of friction and tangential compliance in golf ball bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R., April 2023.</li>
-    <li> British Applied Mathematics Colloquium, Loughborough. Contributed talk: <i>Curious dynamics of a golf ball bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R., April 2022.</li>
-    <li> Dynamical Systems – Theory and Applications. Contributed Talk: <i>The Dynamics of Golf Ball Bounce</i>, December 2021.</li>
-    <li>Dynamics Days Europe 2021. Contributed talk: <i>Curious Dynamics of a Golf Ball Bounce</i>, August 2021.</li>
-    <li> SIAM Applications of Dynamical Systems (DS21). Minisymposium: <i>The Dynamics of Golf Ball Bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R., May 2021.</li>
-    <li> British Mathematical Colloquium – British Applied Mathematics Colloquium. Poster presentation: <i>Curious dynamics of a Golf Ball Bounce</i>, April 2021.</li>
+    <li> British Applied Mathematics Colloquium, Exeter, <b>June 2025.</b> 
+      <br>Minisymposium talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C.</li>
+    <li> SIAM Applications of Dynamical Systems (DS25), Denver, CO, USA, <b>May 2025.</b> 
+      <br>Minisymposium: <i>Mathematics of Brain Function and Disease</i>, talk: <i>Mechanisms for Entrainment in Deep Brain Stimulation Treatment for Parkinson’s Disease</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C.</li>
+    <li> University of Bristol Engineering Mathematics Research Group Away Day, Bristol, <b>March 2025.</b> 
+      <br>Invited talk: <i>Deep brain stimulation in Parkinson’s Disease. Insights from mathematical understanding of entrainment</i>. <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Denison, T., Skeldon, A. C.</li>
+    <li> UK DRI Connectome, <b>November 2024.</b> 
+      <br>Poster presentation: <i>Deep brain stimulation in Parkinson's Disease: Insights from mathematical understanding of entrainment</i> <br>Coauthors: Sermon, J. J., Busch, J. L., Kühn, A., Constandinou T., Dijk, D.-J., Skeldon, A. C., Denison, T.</li> 
+    <li> British Applied Mathematics Colloquium, Newcastle, <b>April 2024.</b> 
+      <br>Contributed talk: <i>Bounce of a rubber ball and other impact phenomena</i>. <br>Coauthors: Champneys, A. R., Várkonyi, P., Hunt H.</li>
+    <li> SIAM Applications of Dynamical Systems (DS23), Portland, OR, USA, <b>May 2023</b>. 
+      <br>Minisymposium talk: <i>Analysis of Point-Contact Models of the Bounce of a Golf Ball Against a Compliant Frictional Surface</i>.
+    <br>Coauthors: Champneys, A. R., Szalai, R.</li>
+    <li> British Applied Mathematics Colloquium, Bristol, <b>April 2023</b>. 
+      <br>Contributed talk: <i>Effects of friction and tangential compliance in golf ball bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R.</li>
+    <li> British Applied Mathematics Colloquium, Loughborough, <b>April 2022</b>. 
+      <br>Contributed talk: <i>Curious dynamics of a golf ball bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R.</li>
+    <li> Dynamical Systems – Theory and Applications, <b>December 2021</b>. 
+      <br>Contributed Talk: <i>The Dynamics of Golf Ball Bounce</i>, December 2021.</li>
+    <li>Dynamics Days Europe 2021, <b> August 2021</b>. 
+      <br>Contributed talk: <i>Curious Dynamics of a Golf Ball Bounce</i>.</li>
+    <li> SIAM Applications of Dynamical Systems (DS21), <b>May 2021</b>.
+    <br>Minisymposium: <i>The Dynamics of Golf Ball Bounce</i>. <br>Coauthors: Champneys, A. R., Szalai, R.</li>
+    <li> British Mathematical Colloquium – British Applied Mathematics Colloquium, <b>April 2021</b>. 
+      <br>Poster presentation: <i>Curious dynamics of a Golf Ball Bounce</i>.</li>
   </ul>
 
   <img src="figures/tongues.png" alt="Arnold tongues in forced neuronal dynamics" style="max-width: 100%; height: auto; border-radius: 8px;" />
