--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <h2>Collaborations</h2>
   <ul>
-    <li> <b>University of Bristol, UK</b>: Prof. Alan Champneys, Dr Ryan Palmer</li>
+    <li> <b>University of Bristol, UK</b>: Prof. Alan Champneys, <a href ="https://www.bristol.ac.uk/people/person/Ryan-Palmer-ee3b79d8-dde4-462c-8c95-66352cd9bd6e/">Dr Ryan Palmer</a> </li>
     <li> <b>EAWAG</b>: <a href="https://github.com/edwardlavender">Dr Edward Lavender</a></li>
     <li> <b>Poznań University of Life Sciences, Poland</b>: Prof. Jarosław Potarzycki, Prof. Katarzyna Przygocka-Cyna
 
